k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eat-now
  labels:
    name: eat-now
