k8s/delivery-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service-nodeport
  labels:
    app: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082
    protocol: TCP
  type: NodePort
