k8s/delivery-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
  - port: 8080
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
