k8s/menu-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service-nodeport
  labels:
    app: menu-service
spec:
  selector:
    app: menu-service
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
    protocol: TCP
  type: NodePort
