k8s/menu-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  labels:
    app: menu-service
spec:
  selector:
    app: menu-service
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
