k8s/order-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-nodeport
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30083
    protocol: TCP
  type: NodePort
