k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  type: ClusterIP
