k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eatnow-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /menu
        pathType: Prefix
        backend:
          service:
            name: menu-service
            port:
              number: 8081
      - path: /delivery
        pathType: Prefix
        backend:
          service:
            name: delivery-service
            port:
              number: 8082
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8083
